[change] name error -> hint

--- a/stories/DataEntry/Textfield.stories.mdx
+++ b/stories/DataEntry/Textfield.stories.mdx
@@ -100,10 +100,10 @@ export const Default = (args, { argTypes }) => ({
 <ArgsTable story="Default" />
 
 ## Stories
-### Error default
+### Hint default
 
 <Canvas>
-    <Story name="Error Default" height="200px">
+    <Story name="Hint Default" height="200px">
         {{
             template: `
                 <div style="width:300px">
@@ -144,10 +144,10 @@ export const Default = (args, { argTypes }) => ({
     </Story>
 </Canvas>
 
-### Error Secondary
+### Hint Secondary
 
 <Canvas>
-    <Story name="Error Secondary" height="200px">
+    <Story name="Hint Secondary" height="200px">
         {{
             template: `
                 <div style="width:300px">
@@ -192,10 +192,10 @@ export const Default = (args, { argTypes }) => ({
     </Story>
 </Canvas>
 
-### Error Success
+### Hint Success
 
 <Canvas>
-    <Story name="Error Success" height="200px">
+    <Story name="Hint Success" height="200px">
         {{
             template: `
                 <div style="width:300px">
@@ -240,10 +240,10 @@ export const Default = (args, { argTypes }) => ({
     </Story>
 </Canvas>
 
-### Error Primary
+### Hint Primary
 
 <Canvas>
-    <Story name="Error Primary" height="200px">
+    <Story name="Hint Primary" height="200px">
         {{
             template: `
                 <div style="width:300px">
