--- a/stories/Components/Message/Popover.stories.mdx
+++ b/stories/Components/Message/Popover.stories.mdx
@@ -61,9 +61,10 @@ export const Default = (args, { argTypes }) => ({
 ### All
 
 <Canvas>
-    <Story name="All" height="100px">
+    <Story name="All" height="300px">
         {{
             template: `
+            <div>
                 <div style="width: 100%; height: 100px; display: flex; justify-content: space-around; align-items: center">
                     <Popover placement="bottom-right" :open="true">
                         <Icon name="IconProfileLargeFill"></Icon>
@@ -90,7 +91,7 @@ export const Default = (args, { argTypes }) => ({
                             <template v-slot:popover>
                                 <Typography type="body2">Title</Typography>
                                 <Typography type="caption1" color="gray800">content</Typography>
-                                <Button>hello</Button>
+                                <Button>button</Button>
                             </template>
                     </Popover>
                     <Popover placement="bottom" :open="true">
@@ -98,7 +99,7 @@ export const Default = (args, { argTypes }) => ({
                             <template v-slot:popover>
                                 <Typography type="body2">Title</Typography>
                                 <Typography type="caption1" color="gray800">content</Typography>
-                                <Button>hello</Button>
+                                <Button>button</Button>
                             </template>
                     </Popover>
                     <Popover placement="bottom-left" :open="true">
@@ -106,12 +107,13 @@ export const Default = (args, { argTypes }) => ({
                             <template v-slot:popover>
                                 <Typography type="body2">Title</Typography>
                                 <Typography type="caption1" color="gray800">content</Typography>
-                                <Button>hello</Button>
+                                <Button>button</Button>
                             </template>
                     </Popover>
                 </div>
+            </div>
         `,
-          components: { Popover, Icon },
+          components: { Popover, Icon, Typography, Button },
         }}
     </Story>
 </Canvas>
@@ -121,25 +123,27 @@ export const Default = (args, { argTypes }) => ({
     <Story name="Position" height="100px">
         {{
             template: `
-                <div style="width: 100%; height: 100px; display: flex; justify-content: space-around; align-items: center">
-                    <Popover placement="bottom-right" :open="true">
-                        <Icon name="IconProfileLargeFill"></Icon>
-                            <template v-slot:popover>
-                                <div>bottom-right</div>
-                            </template>
-                    </Popover>
-                    <Popover placement="bottom" :open="true">
-                        <Icon name="IconProfileLargeFill"></Icon>
-                            <template v-slot:popover>
-                                <div>bottom</div>
-                            </template>
-                    </Popover>
-                    <Popover placement="bottom-left" :open="true">
-                        <Icon name="IconProfileLargeFill"></Icon>
-                            <template v-slot:popover>
-                                <div>bottom-left</div>
-                            </template>
-                    </Popover>
+                <div>
+                    <div style="width: 100%; height: 100px; display: flex; justify-content: space-around; align-items: center">
+                        <Popover placement="bottom-right" :open="true">
+                            <Icon name="IconProfileLargeFill"></Icon>
+                                <template v-slot:popover>
+                                    <div>bottom-right</div>
+                                </template>
+                        </Popover>
+                        <Popover placement="bottom" :open="true">
+                            <Icon name="IconProfileLargeFill"></Icon>
+                                <template v-slot:popover>
+                                    <div>bottom</div>
+                                </template>
+                        </Popover>
+                        <Popover placement="bottom-left" :open="true">
+                            <Icon name="IconProfileLargeFill"></Icon>
+                                <template v-slot:popover>
+                                    <div>bottom-left</div>
+                                </template>
+                        </Popover>
+                     </div>
                  </div>
         `,
           components: { Popover, Icon, Typography, Button },
@@ -158,7 +162,7 @@ export const Default = (args, { argTypes }) => ({
                             <template v-slot:popover>
                                 <Typography type="body2">Title</Typography>
                                 <Typography type="caption1" color="gray800">content</Typography>
-                                <Button>hello</Button>
+                                <Button>button</Button>
                             </template>
                     </Popover>
                     <Popover placement="bottom" :open="true">
@@ -166,7 +170,7 @@ export const Default = (args, { argTypes }) => ({
                             <template v-slot:popover>
                                 <Typography type="body2">Title</Typography>
                                 <Typography type="caption1" color="gray800">content</Typography>
-                                <Button>hello</Button>
+                                <Button>button</Button>
                             </template>
                     </Popover>
                     <Popover placement="bottom-left" :open="true">
@@ -174,7 +178,7 @@ export const Default = (args, { argTypes }) => ({
                             <template v-slot:popover>
                                 <Typography type="body2">Title</Typography>
                                 <Typography type="caption1" color="gray800">content</Typography>
-                                <Button>hello</Button>
+                                <Button>button</Button>
                             </template>
                     </Popover>
                  </div>
