--- a/stories/DataEntry/FormGroup.stories.mdx
+++ b/stories/DataEntry/FormGroup.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import FormGroup from "@/src/Components/DataEntry/FormGroup";
 import TextField from "@/src/Components/DataEntry/TextField";
-import TextArea from "@/src/Components/DataEntry/TextArea";
+import Textarea from "@/src/Components/DataEntry/Textarea";
 
 <Meta
     title="Data Entry/FormGroup"
@@ -10,12 +10,12 @@ import TextArea from "@/src/Components/DataEntry/TextArea";
 
 export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
-    components: { FormGroup, TextField, TextArea },
+    components: { FormGroup, TextField, Textarea },
     template:
         `<div style="width:300px">
              <FormGroup>
                  <TextField outlined placeholder="사이 사이 간격 12px"/>
-                 <TextArea type="outlined" />
+                 <Textarea type="outlined" />
              </FormGroup>
          </div>`,
 });
