--- a/stories/DataEntry/DatePicker.stories.mdx
+++ b/stories/DataEntry/DatePicker.stories.mdx
@@ -1,10 +1,43 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import DatePicker from "@/src/Components/DataEntry/DatePicker";
+import DatePicker, { valueTypes } from "@/src/Components/DataEntry/DatePicker";
 import Typography from "@/src/Elements/Core/Typography/Typography";
 
 <Meta
     title="Data Entry/DatePicker"
     component={ DatePicker }
+    argTypes={{
+        value: {
+            description: "값",
+            control: {
+                type: "none",
+            },
+        },
+        valueType: {
+            description: "값 형식",
+            control: {
+                type: "select",
+                options: valueTypes,
+            },
+        },
+        placeholder: {
+            description: "placeholder 문구",
+            control: {
+                type: "text",
+            },
+        },
+        full: {
+            description: "input width가 100%인지 (달력 크기는 변하지 않음)",
+            control: {
+                type: "boolean",
+            },
+        },
+        disabled: {
+            description: "비활성화",
+            control: {
+                type: "boolean",
+            },
+        },
+    }}
 />
 
 
