--- a/stories/DataEntry/FormGroup.stories.mdx
+++ b/stories/DataEntry/FormGroup.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import FormGroup from "@/src/Components/DataEntry/FormGroup";
-import TextField from "@/src/Components/DataEntry/TextField";
+import Textfield from "@/src/Components/DataEntry/Textfield";
 import TextArea from "@/src/Components/DataEntry/TextArea";
 
 <Meta
@@ -10,11 +10,11 @@ import TextArea from "@/src/Components/DataEntry/TextArea";
 
 export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
-    components: { FormGroup, TextField, TextArea },
+    components: { FormGroup, Textfield, TextArea },
     template:
         `<div style="width:300px">
              <FormGroup>
-                 <TextField outlined placeholder="사이 사이 간격 12px"/>
+                 <Textfield outlined placeholder="사이 사이 간격 12px"/>
                  <TextArea type="outlined" />
              </FormGroup>
          </div>`,
