--- a/stories/DataEntry/Textfield.stories.mdx
+++ b/stories/DataEntry/Textfield.stories.mdx
@@ -1,15 +1,15 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import TextField, { textFieldTypes, textFieldAligns, textFieldErrorColor } from "@/src/Components/DataEntry/TextField";
+import Textfield, { TextfieldTypes, TextfieldAligns, TextfieldColor } from "@/src/Components/DataEntry/Textfield";
 
 <Meta
-    title="Data Entry/TextField"
-    component={ TextField }
+    title="Data Entry/Textfield"
+    component={ Textfield }
     argTypes={{
         type: {
             description: "텍스트필드 type",
             control: {
             type: "select",
-            options: textFieldTypes,
+            options: TextfieldTypes,
            },
         },
         outlined: {
@@ -31,7 +31,7 @@ import TextField, { textFieldTypes, textFieldAligns, textFieldErrorColor } from 
             description: "텍스트필드 text 정렬",
             control: {
                 type: "select",
-                options: textFieldAligns,
+                options: TextfieldAligns,
             },
         },
         focus: {
@@ -53,7 +53,7 @@ import TextField, { textFieldTypes, textFieldAligns, textFieldErrorColor } from 
             description: "hint color",
             control: {
             type: "select",
-            options: textFieldErrorColor,
+            options: TextfieldColor,
            },
         },
         hint:{
@@ -72,9 +72,9 @@ import TextField, { textFieldTypes, textFieldAligns, textFieldErrorColor } from 
 
 export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
-    components: { TextField },
+    components: { Textfield },
     template:
-        `<TextField
+        `<Textfield
             :type="type"
             :outlined="outlined"
             :placeholder="placeholder"
@@ -89,9 +89,9 @@ export const Default = (args, { argTypes }) => ({
         />`,
 });
 
-# TextField
+# Textfield
 
-**TextField** 컴포넌트의 문서입니다.
+**Textfield** 컴포넌트의 문서입니다.
 
 <Story name="Default" height="100px">
     {Default.bind({})}
@@ -107,14 +107,14 @@ export const Default = (args, { argTypes }) => ({
         {{
             template: `
                 <div style="width:300px">
-                    <TextField
+                    <Textfield
                         type="text"
                         hint="내용을 입력해주세요."
                         :outlined="false"
                         placeholder="underlined + hint "
                         class="mb-20"
                     />
-                    <TextField
+                    <Textfield
                         type="text"
                         hint="내용을 입력해주세요."
                         :outlined="false"
@@ -122,14 +122,14 @@ export const Default = (args, { argTypes }) => ({
                         placeholder="underlined + hint + label"
                         class="mb-20"
                     />
-                    <TextField
+                    <Textfield
                         type="text"
                         hint="내용을 입력해주세요."
                         outlined
                         placeholder="outlined + hint "
                         class="mb-20"
                     />
-                    <TextField
+                    <Textfield
                         type="text"
                         hint="내용을 입력해주세요."
                         outlined
@@ -139,7 +139,7 @@ export const Default = (args, { argTypes }) => ({
                     />
                 </div>
             `,
-            components: { TextField },
+            components: { Textfield },
         }}
     </Story>
 </Canvas>
@@ -151,7 +151,7 @@ export const Default = (args, { argTypes }) => ({
         {{
             template: `
                 <div style="width:300px">
-                    <TextField
+                    <Textfield
                         type="text"
                         color="secondary"
                         hint="내용을 입력해주세요."
@@ -159,7 +159,7 @@ export const Default = (args, { argTypes }) => ({
                         placeholder="underlined + hint "
                         class="mb-20"
                     />
-                    <TextField
+                    <Textfield
                         type="text"
                         color="secondary"
                         hint="내용을 입력해주세요."
@@ -168,7 +168,7 @@ export const Default = (args, { argTypes }) => ({
                         placeholder="underlined + hint + label"
                         class="mb-20"
                     />
-                    <TextField
+                    <Textfield
                         type="text"
                         hint="내용을 입력해주세요."
                         color="secondary"
@@ -176,7 +176,7 @@ export const Default = (args, { argTypes }) => ({
                         placeholder="outlined + hint"
                         class="mb-20"
                     />
-                    <TextField
+                    <Textfield
                         type="text"
                         hint="내용을 입력해주세요."
                         color="secondary"
@@ -187,7 +187,7 @@ export const Default = (args, { argTypes }) => ({
                     />
                 </div>
             `,
-            components: { TextField },
+            components: { Textfield },
         }}
     </Story>
 </Canvas>
@@ -199,7 +199,7 @@ export const Default = (args, { argTypes }) => ({
         {{
             template: `
                 <div style="width:300px">
-                    <TextField
+                    <Textfield
                         type="text"
                         color="success"
                         hint="내용을 입력해주세요."
@@ -207,7 +207,7 @@ export const Default = (args, { argTypes }) => ({
                         placeholder="underlined + hint"
                         class="mb-20"
                     />
-                    <TextField
+                    <Textfield
                         type="text"
                         color="success"
                         hint="내용을 입력해주세요."
@@ -216,7 +216,7 @@ export const Default = (args, { argTypes }) => ({
                         placeholder="underlined + hint + label"
                         class="mb-20"
                     />
-                    <TextField
+                    <Textfield
                         type="text"
                         hint="내용을 입력해주세요."
                         color="success"
@@ -224,7 +224,7 @@ export const Default = (args, { argTypes }) => ({
                         placeholder="outlined + hint"
                         class="mb-20"
                     />
-                    <TextField
+                    <Textfield
                         type="text"
                         hint="내용을 입력해주세요."
                         color="success"
@@ -235,7 +235,7 @@ export const Default = (args, { argTypes }) => ({
                     />
                 </div>
             `,
-            components: { TextField },
+            components: { Textfield },
         }}
     </Story>
 </Canvas>
@@ -247,7 +247,7 @@ export const Default = (args, { argTypes }) => ({
         {{
             template: `
                 <div style="width:300px">
-                    <TextField
+                    <Textfield
                         type="text"
                         color="primary"
                         hint="내용을 입력해주세요."
@@ -255,7 +255,7 @@ export const Default = (args, { argTypes }) => ({
                         placeholder="underlined + hint "
                         class="mb-20"
                     />
-                    <TextField
+                    <Textfield
                         type="text"
                         color="primary"
                         hint="내용을 입력해주세요."
@@ -264,7 +264,7 @@ export const Default = (args, { argTypes }) => ({
                         placeholder="underlined + hint + label"
                         class="mb-20"
                     />
-                    <TextField
+                    <Textfield
                         type="text"
                         hint="내용을 입력해주세요."
                         color="primary"
@@ -272,7 +272,7 @@ export const Default = (args, { argTypes }) => ({
                         placeholder="outlined + hint"
                         class="mb-20"
                     />
-                    <TextField
+                    <Textfield
                         type="text"
                         hint="내용을 입력해주세요."
                         color="primary"
@@ -283,7 +283,7 @@ export const Default = (args, { argTypes }) => ({
                     />
                 </div>
             `,
-            components: { TextField },
+            components: { Textfield },
         }}
     </Story>
 </Canvas>
