[add] icon-revert-medium-line

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -125,6 +125,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconVodMediumLine></IconWrapper>
                             <IconWrapper name=IconEduMediumLine></IconWrapper>
                             <IconWrapper name=IconCouponMediumLine></IconWrapper>
+                            <IconWrapper name=IconRevertMediumLine></IconWrapper>
                         </div>
                     </div>
                     <!--large-->
